Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -295,14 +295,15 @@
        "13.0"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "x_values\n",
-    "x_values and x_values[0] # 13.0"
+    "#x_values and \n",
+    "x_values[0] # 13.0"
    ]
   },
   {
