--- a/index.ipynb
+++ b/index.ipynb
@@ -2153,7 +2153,7 @@
    "outputs": [],
    "source": [
     "def squared_errors(x_values, y_values, m, b):\n",
-    "    return(list(map(lambda yz: (y_values-(m*x_values)))"
+    "    return(list(map(lambda i: (y_values[-(m*x_values)))"
    ]
   },
   {
