--- a/index.ipynb
+++ b/index.ipynb
@@ -2153,7 +2153,7 @@
    "outputs": [],
    "source": [
     "def squared_errors(x_values, y_values, m, b):\n",
-    "    return list(map(lambda x : squared_error(x_values, y_values, m, b, xes))"
+    "    return list(map(lambda x : squared_error(x_values, y_values, m, b, x),x_values)"
    ]
   },
   {
